Fix z-index for record view useful bar

--- a/core/app/shell/src/themes/suite8/css/layout/_recordview.scss
+++ b/core/app/shell/src/themes/suite8/css/layout/_recordview.scss
@@ -33,7 +33,7 @@
 .record-view-position-sticky {
   position: sticky;
   top: 3em;
-  z-index: 2;
+  z-index: map-get($zindex, nav-high);
 }
 
 .record-view-header {
